k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: part-finder
  labels:
    name: part-finder
